# AwesomeLangchainTutorial

./: .gitignore  README.md
AutoPlanAgent/: utils.py  任务提示词.md
AutoPlanAgent/GPT-5-2-Codex/: .env.example  README.md  pyproject.toml
AutoPlanAgent/GPT-5-2-Codex/autoplan_agent/: __init__.py  api.py  cli.py  config.py  executor.py  llm.py  logging_utils.py  planner.py  report.py  schemas.py  state.py  tools.py
AutoPlanAgent/GPT-5-2-Codex/autoplan_agent/templates/: report.html.j2  report.md.j2
AutoPlanAgent/GPT-5-2-Codex/scripts/: demo_plan.py  verify_basic.py
langchain0.3/: task1.ipynb  task2.ipynb  task3.ipynb  task4.ipynb  task5.1.ipynb  task5.2.ipynb  task5.3.ipynb  task5.4.ipynb  task5.5.ipynb  task5.6.ipynb  task6.ipynb  weather_server.py
langchain1.x/: README.md  pyproject.toml  task1-LangChain-Quickstart.ipynb  task2-Agentic RAG.ipynb  task3-Build a custom RAG agent.ipynb  task4-DeepAgents-Quickstart.ipynb  task5-Agents.ipynb  task6.1-Middleware-Overview.ipynb  task6.2-Middleware-Built-in middleware.ipynb  task6.3-Middleware-Custom middleware.ipynb  task7-Multi-Agent.ipynb  task8-AgentSkills.ipynb  utils.py
