[project]
name = "langchain1-0"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "langchain-openai>=1.0.3",
    "langchain>=1.0.7",
    "ipykernel>=7.1.0",
    "markdownify>=1.2.2",
    "langchain-community>=0.4.1",
    "langchain-text-splitters>=1.0.0",
    "bs4>=0.0.2",
    "deepagents>=0.2.8",
    "tavily-python>=0.7.13",
    "langchain-qwq>=0.3.0",
    "trafilatura>=2.0.0",
    "cloudscraper>=1.2.71",
    "pandas>=2.3.3",
    "openpyxl>=3.1.5",
    "playwright>=1.57.0",
    "readability-lxml>=0.8.4.1",
]
